--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 EXPRESS_PORT=3000
-BOT_ID=
-BOT_USER_ID=
-BOT_VERIFICATION_CODE=
 BOT_ACCESS_TOKEN=
-BOT_INSTALL_CODE=
+BOT_CHANNEL_ID=
+SPOTIFY_CLIENT_ID=
+SPOTIFY_CLIENT_SECRET=
+SPOTIFY_USER_ID=
+SPOTIFY_REDIRECT_URL=
+SPOTIFY_REFRESH_TOKEN=
